# solar_boiler_monitor

./: Cargo.toml
doc/: Solisart_exchanges.md  donnees_ids.md  lecture_description_données.md  lecture_info.md
doc/boiler communication protocol/: boiler exchanges.md  read boiler constants.md  read boiler info.md  read data description.md
doc/structure/: architecture.md  collector_state_machine.md  parameters.md  project structure.md
src/: data.rs  lib.rs  main.rs  queue.rs
src/automate/: counters.rs  machine.rs  machine_tests.rs  mod.rs  state.rs
src/automate/actions/: diagnostic.rs  initialize.rs  login.rs  logoff.rs  mod.rs  read_desc.rs  read_values.rs
src/automaton/: automaton.rs  automaton_tests.rs  client.rs  mod.rs  state.rs  xml_utils.rs
src/automaton/actions/: diagnostic.rs  initialize.rs  login.rs  logoff.rs  read_desc.rs  read_values.rs
src/config/: config.rs  mod.rs
src/logger/: logger.rs  logger_tests.rs  mod.rs
src/processor/: processor.rs
src/timeseries/: mod.rs  processor.rs  storage.rs
src/victoriametrics/: client.rs  mod.rs  models.rs
src/web/: mod.rs  web.rs
tests/automate/: machine.rs
tests/automaton/: automaton_e2e.rs
tests/processor/: processor_e2e.rs
tests/timeseries/: processor.rs
