[package]
name = "home_automation"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = "1.49.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11+spec-1.1.0"
reqwest = "0.13.2"
serde_json = "1.0.149"
log = "0.4.29"
fern = { version = "0.7.1", features = ["colored"] }
chrono = "0.4"
clap = { version = "4.5.57", features = ["derive"] }
console = "0.16.2"
signal-hook = "0.4.3"
ctrlc = "3.5.1"


[[test]]
name = "QA_automate_test"
path = "tests/automate/machine.rs"

[[test]]
name = "QA_timeseries_test"
path = "tests/timeseries/processor.rs"